# fugu

./: .gitignore  CMakeLists.txt  fugu.sln
fugu/: fugu.vcxproj  fugu.vcxproj.filters  main.cpp
fugu/platform/: window.cpp  window.hpp
fugu/vulkan/: instance.cpp  instance.hpp  vkmain.hpp
src/: main.cpp
src/cmake/: FindVulkan.cmake
src/platform/: window.cpp
src/shader/: simple.frag  simple.vert
src/util/: util.cpp  util.hpp
src/vulkan/: buffer.cpp  buffer.hpp  instance.cpp  instance.hpp  shader.cpp  shader.hpp  vkutil.cpp  vkutil.hpp
